# MLOPS_P2

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run.py  run.sh
src/: datamodule.py  transformer.py
src/mlopsp2/: const.py  datamodule.py  trainer.py  transformer.py
